# Blackjack

./: CMakeLists.txt  README.md  README.tr.md  READMETR.md  blackjack.c  blackjack.h  main.c
.github/workflows/: build.yml
blackjackAnaKod/: blackjack.c
